src/test/ui/consts/const-eval/assign-to-static-within-other-static.stderr
error[E0019]: static contains unimplemented expression type
  --> $DIR/assign-to-static-within-other-static.rs:10:5
   |
LL |     FOO = 5;
   |     ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0019`.
